--- a/src/Tarea1ErickMarinCartin/VentanaPartido.form
+++ b/src/Tarea1ErickMarinCartin/VentanaPartido.form
@@ -6,6 +6,8 @@
       <xy x="20" y="20" width="593" height="400"/>
     </constraints>
     <properties>
+      <alignmentX value="1.0"/>
+      <alignmentY value="1.0"/>
       <preferredSize width="600" height="300"/>
     </properties>
     <border type="none"/>
